--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,11 +14,26 @@ jobs:
       - run: pyenv local 3.6.5
 
       - run:
-          name: Install Cilantro Requirements
+          name: Login to Docker
           command: |
-             pip install -r requirements.txt --upgrade --no-cache-dir --exists-action w
-             pip install -r dev-requirements.txt --upgrade --no-cache-dir --exists-action w
-        
+            docker login -u $DOCKER_USER -p $DOCKER_PWD
+
+      - run:
+          name: Login to AWS
+          command: |
+            mkdir -p ~/.aws
+            cat << EOF > ~/.aws/credentials
+            [default]
+            aws_access_key_id = $AMZN_ACCESS_KEY
+            aws_secret_access_key = $AMZN_SECRET_KEY
+            EOF
+
+      - run:
+          name: Install Devops Requirements
+          command: |
+            apt-get install terraform
+            pip3 install pathspec
+
       - run:
           name: Stand up terraform nodes
           command: |
@@ -46,11 +61,24 @@ jobs:
       - run: sudo chown -R circleci:circleci /opt/circleci/.pyenv/versions/3.6.5/lib/python3.6/site-packages
       - restore_cache:
           key: cilantro-{{ checksum "requirements.txt" }}-{{ checksum "dev-requirements.txt" }}-integration
+      - run: pyenv local 3.6.5
+
+      - run:
+          name: Login to Docker
+          command: |
+            docker login -u $DOCKER_USER -p $DOCKER_PWD
+
+      - run:
+          name: Download Base Images
+          command: |
+            docker pull lamden/cilantro_base
+            docker pull lamden/cilantro_full
+            docker pull lamden/cilantro_light
 
       - run:
           name: Build and Push Docker Image
           command: |
-             ./ops/tools/docker_build_push.sh
+             ./ops/tools/docker_build_push.sh --push
 
       - run:
           name: Run Docker Images
@@ -63,3 +91,4 @@ workflows:
   build_and_test_cilantro:
     jobs:
       - unit_tests
+#      - black_box_integration
