--- a/ops/base/circus_unittest.conf
+++ b/ops/base/circus_unittest.conf
@@ -13,7 +13,6 @@ virtualenv = /app/venv
 cmd = python3 /app/scripts/start_mongo.py
 copy_env = True
 virtualenv = /app/venv
-warmup_delay = 5
 
 [watcher:mongo_create_user]
 cmd = python3 /app/scripts/create_user.py
@@ -22,8 +21,8 @@ virtualenv = /app/venv
 warmup_delay = 5
 respawn = False
 
-[watcher:unittests]
-cmd = python3 /app/tests/run_tests.py --integration 1 --unit 0
+[watcher:bootstrap]
+cmd = python3 /app/scripts/bootstrap.py
 copy_env = True
 virtualenv = /app/venv
 
