i mount redis.conf also ok

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
           name: Spinup Docker Image
           command: |
              echo "SHOULD RUN DOCKER IMAGES HEREEERRERERERERERERERE"
-             sudo docker run --name cil -dit -v /var/db/cilantro/:/var/db/cilantro -v ~/cilantro/ops/base/circus_unittest.conf:/etc/circus.conf lamden/cilantro_full:$(bash ~/cilantro/ops/tools/generate_tag.sh)
+             sudo docker run --name cil -dit -v /var/db/cilantro/:/var/db/cilantro -v ~/cilantro/ops/base/redis.conf:/etc/redis.conf -v ~/cilantro/ops/base/circus_unittest.conf:/etc/circus.conf lamden/cilantro_full:$(bash ~/cilantro/ops/tools/generate_tag.sh)
 
       - run:
           name: Docker Exec and Run Test
@@ -108,4 +108,4 @@ workflows:
   build_and_test_cilantro:
     jobs:
       - unit_tests
-#      - black_box_integration
+#      - black_box_integrations
