i add test, some updates to comm layer, and i fix circus full

--- a/ops/base/circus_full.conf
+++ b/ops/base/circus_full.conf
@@ -22,8 +22,8 @@ virtualenv = /app/venv
 warmup_delay = 5
 respawn = False
 
-[watcher:unittests]
-cmd = python3 /app/tests/run_tests.py --integration 1 --unit 0
+[watcher:bootstrap]
+cmd = python3 /app/scripts/bootstrap.py
 copy_env = True
 virtualenv = /app/venv
 
