hella clean ups and fixes. mostly getting rid of reliance on env vars, and using the CilantroConf object instead...currently investigating a catchup bug

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
       - run: pyenv local 3.6.5
 
       - run:
-          name: Login to Docker
+          name: Login to Dockern
           command: |
             docker login -u $DOCKER_USER -p $DOCKER_PWD
             sleep 1
