Updated makefile to have full make help

--- a/ops/base/environment/Makefile
+++ b/ops/base/environment/Makefile
@@ -25,25 +25,52 @@ help:
 	@echo "========================="
 	@echo " -- make run"
 	@echo "     Do a full buildpush + apply"
+	@echo " -- ADDITIONAL_FLAGS='-auto-approve' make run"
+	@echo "     Auto approve the terraform changes during a make run (NOTE: this will not"
+	@echo "     give you the chance to validate your changes and thus should not be used for"
+	@echo "     production instances"
 	@echo " -- make restart"
 	@echo "     Restart with last docker tag that completed the apply stage"
 	@echo " -- DOCKER_TAG=<tag> make apply"
-	@echo "     Run with a specifically provided tag (NOTE: if you are running this command with the same tag as the last run, it will not restart docker)"
+	@echo "     Run with a specifically provided tag (NOTE: if you are running this command"
+	@echo "     with the same tag as the last run, it will not restart docker)"
 	@echo " -- make show"
 	@echo "     Show the outputs from the provisioning step. Including SSH commands"
 	@echo ""
-	@echo "Available Targets:"
-	@echo "=================="
-	@echo " -- make run             Do a full docker build + docker push (of latest code local) then terraform apply"
-	@echo " -- make restart         Taint all the docker containers so they are restarted, use the tag from the last known successful launch"
-	@echo " -- make buildpush       Build and push the docker container with a tag representing the branch + commit + code hash"
-	@echo " -- make apply           Run the terraform apply steps to change provisioned resources to match any changes locally"
+	@echo "Running Tests"
+	@echo "============="
+	@echo "NOTE: when running test endpoints, please be sure you have a deployment for the"
+	@echo "      current environment active first. This can be accomplished with a call to"
+	@echo "      'make run'"
+	@echo " -- make testdump"
+	@echo "	    Start a black-box test to dump transactions to the deployed environment"
+	@echo " -- make testcurr"
+	@echo "     Run end-to-end black-box test on the currency contract"
+	@echo " -- make testsc"
+	@echo "     Run end-to-end black-box test on smart contracts in general"
+	@echo ""
+	@echo "All Available Targets:"
+	@echo "======================"
+	@echo " -- make run             Do a full docker build + docker push (of latest code local)"
+	@echo "                         then terraform apply"
+	@echo " -- make restart         Taint all the docker containers so they are restarted, use"
+	@echo "                         the tag from the last known successful launch"
+	@echo " -- make buildpush       Build and push the docker container with a tag representing"
+	@echo "                         the branch + commit + code hash"
+	@echo " -- make apply           Run the terraform apply steps to change provisioned"
+	@echo "                         resources to match any changes locally"
 	@echo " -- make getlasttag      Get the tag from the last known successful launch"
-	@echo " -- make taintdocker     Taint all the docker containers so they are rebooted on the next run of 'make apply'"
-	@echo " -- make clean           Clean out the cache files, destroy the provisioned terraform resources"
+	@echo " -- make taintdocker     Taint all the docker containers so they are rebooted on the"
+	@echo "                         next run of 'make apply'"
+	@echo " -- make clean           Clean out the cache files, destroy the provisioned terraform"
+	@echo "                         resources"
 	@echo " -- make destroy         Destroy the provisioned terraform resources"
 	@echo " -- make show            Show the outputs from the provisioning"
-	@echo " -- make testdump        Start a test script to dump transactions to the deployed environment"
+	@echo " -- make testdump        Start a test script to dump transactions to the deployed"
+	@echo "                         environment"
+	@echo " -- make testcurr        End-to-End black box, programatically test the currency"
+	@echo "                         contract"
+	@echo " -- make testsc          End-to-End black box, test smart contract submissions"
 	@echo ""
 
 
@@ -84,7 +111,7 @@ clean: destroy
 
 # Destroy all the terraform resources
 destroy:
-	@terraform destroy -var 'docker_tag=$(DOCKER_TAG)' -var 'user=$(USER)' -var 'environment_name=$(shell basename $(MY_PATH))'
+	@terraform destroy -var 'docker_tag=$(DOCKER_TAG)' -var 'user=$(USER)' -var 'environment_name=$(shell basename $(MY_PATH))' $(ADDITIONAL_FLAGS)
 
 # Show all the outputs from the run
 show:
