--- a/ops/base/ledis.conf
+++ b/ops/base/ledis.conf
@@ -1,7 +1,7 @@
 # LedisDB configuration
 
 # Server listen address
-addr = "127.0.0.1:6380"
+addr = "127.0.0.1:6379"
 
 # Server http listen address, set empty to disable
 http_addr = "127.0.0.1:11181"
@@ -35,7 +35,7 @@ readonly = false
 #   goleveldb
 #   memory
 #
-db_name = "leveldb"
+db_name = "goleveldb"
 
 # If not set, use data_dir/"db_name"_data
 db_path = ""
