--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,7 @@ jobs:
       - run:
           name: Spinup Docker Image
           command: |
-             sudo docker run --name cil -dit -v /var/db/cilantro_ee/:/var/db/cilantro_ee -v ~/cilantro_ee/ops/base/redis.conf:/etc/redis.conf -v ~/cilantro_ee/ops/base/circus_unittest.conf:/etc/circus.conf lamden/cilantro_ee_full:$(bash ~/cilantro_ee/ops/tools/generate_tag.sh)
+             sudo docker run --name cil -dit -v /var/db/cilantro_ee/:/var/db/cilantro_ee -v ~/cilantro_ee/ops/base/ledis.conf:/etc/ledis.conf -v ~/cilantro_ee/ops/base/circus_unittest.conf:/etc/circus.conf lamden/cilantro_ee_full:$(bash ~/cilantro_ee/ops/tools/generate_tag.sh)
 
       - run:
           name: Run Unit Tests Inside Docker Container
