--- a/ops/base/circus_full.conf
+++ b/ops/base/circus_full.conf
@@ -4,8 +4,8 @@ statsd = True
 #[plugin:redis-observer]
 #use = circus.plugins.redis_observer.RedisObserver
 
-[watcher:redis]
-cmd = python3 /app/scripts/start_redis.py
+[watcher:ledis]
+cmd = python3 /app/scripts/start_ledis.py
 copy_env = True
 virtualenv = /app/venv
 
