--- a/ops/base/circus_light.conf
+++ b/ops/base/circus_light.conf
@@ -4,7 +4,7 @@ statsd = True
 #[plugin:redis-observer]
 #use = circus.plugins.redis_observer.RedisObserver
 
-[watcher:redis]
+[watcher:ledis]
 cmd = python3 /app/scripts/start_ledis.py
 copy_env = True
 virtualenv = /app/venv
