--- a/ops/base/circus_full.conf
+++ b/ops/base/circus_full.conf
@@ -1,6 +1,3 @@
-[circus]
-statsd = True
-
 [watcher:ledis]
 cmd = python3 /app/scripts/start_ledis.py
 copy_env = True
@@ -10,17 +7,15 @@ virtualenv = /app/venv
 cmd = python3 /app/scripts/start_mongo.py
 copy_env = True
 virtualenv = /app/venv
-warmup_delay = 5
 
 [watcher:mongo_create_user]
-cmd = python3 /app/scripts/create_user.py
+cmd = python3 /app/scripts/create_user.py 8
 copy_env = True
 virtualenv = /app/venv
-warmup_delay = 5
 respawn = False
 
 [watcher:bootstrap]
-cmd = python3 /app/scripts/bootstrap.py
+cmd = python3 /app/scripts/bootstrap.py 16
 copy_env = True
 virtualenv = /app/venv
 
