--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,7 @@ sanic==0.8.3
 sanic-limiter==0.1.3
 Sanic-Cors==0.9.7
 
--e git+https://github.com/Lamden/seneca.git@new-integration#egg=seneca
--e git+https://github.com/holys/ledis-py.git#egg=ledis
+-e git+https://github.com/Lamden/seneca.git@dev#egg=seneca
 
 pathspec
 umsgpack
