--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ uvloop==0.9.1
 #u-msgpack-python==2.5.0
 yarl==1.1.0
 Click==7.0
-simple-crypt==4.1.7
 sanic==0.8.3
 sanic-limiter==0.1.3
 Sanic-Cors==0.9.7
@@ -17,4 +16,4 @@ aiohttp
 transitions
 astor
 
-#blah
+# GIVE ME THE $$$$$$$ (i got the money) did colin do a succ??? hihihihi ah
