--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,2 @@
-requests==2.20.0
-uvloop==0.9.1
-#u-msgpack-python==2.5.0
-yarl==1.1.0
-Click==7.0
-sanic==0.8.3
-sanic-limiter==0.1.3
-Sanic-Cors==0.9.7
-
 -e git+https://github.com/Lamden/seneca.git@queue-merge-cmds#egg=seneca
-
-pathspec
-umsgpack
-aiohttp
-
-transitions
-astor
-
-# GIVE ME THE $$$$$$$ (i got the money) did colin do a succ??? hihihihi ah
+# take 2
